# model_diabetes

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
eda/notebook/: model_diabetes.ipynb
